<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ModAzul"
    tools:context=".Main_Options">

    <TextView
        android:id="@+id/TxtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Message_Welcome"
        android:textColor="@color/gold"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/TxtMessageOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Message_Options"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005" />

    <Button
        android:id="@+id/BtnSellMain"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Verde"
        android:text="@string/TxtSell"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/BtnConsultSalesMain"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gold"
        android:text="@string/BtnConsultSales"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/BtnConsultProviderMain"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gold"
        android:text="@string/BtnConsultProvider"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/BtnProductsReportMain"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gold"
        android:text="@string/BtnProductReport"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/BtnMyAccountMain"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Gris"
        android:text="@string/TxtMyAccount"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/BtnConfigurationMain"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Gris"
        android:text="@string/TxtConfiguration"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <Button
        android:id="@+id/BtnCerrarSesion"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Rojo"
        android:text="@string/BtnLogOut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>